There are changes made to the rehab.html page with the x-srolling which is fixed by hidding the overflow-x, a linear gradient added on the hero-image to make the text more readable and aligning the jumbotrom to look better on all the devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,9 @@ body {
     color: #aaaaaa;
     background-color: #383838;
     text-align: center;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 
@@ -78,19 +81,14 @@ button:focus {
     overflow: hidden;
 }
 .hero-image {
-    background: url("../images/physicaltherapy.jpg") no-repeat center fixed;
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("../images/physicaltherapy.jpg") no-repeat center;
     min-height: 500px;
     width: 100%;
     height: 500px;
-    background-size: cover;
-    
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
+    background-size: auto;
+    overflow: none;
     animation: hero-zoom;
-    animation-duration: 6s;
+    animation-duration: 3s;
     animation-fill-mode: forwards;
 }
 
@@ -105,18 +103,37 @@ button:focus {
 }
 /*-Credit Image credit to Pain Free Physiotherapy Clinic-*/
 
-.therapy {
+.jumbotron {
     background-color: transparent;
-    padding-top: 0;
-    padding-right: 0;
+    padding-top: 33%;
+    padding-left: 40%;
+    color: white;
 }
 
-.quote {
-    color: #383177;
+@media screen and (max-width: 500px){
+    .quote{
+        font-size: 40px;
+        text-align: center;
+    }
+    .hero-image {
+    background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url("../images/physicaltherapy.jpg") no-repeat center;
+    min-height: 200px;
+    width: 100%;
+    height: 200px;
+    background-size: auto;
+    overflow: none;
+    animation: hero-zoom;
+    animation-duration: 3s;
+    animation-fill-mode: forwards;
 }
-
 .therapy-quote {
-    color: #383177;
+    color: white;
+}
+
+
+}
+.therapy-quote {
+    color: white;
 }
 /*information*/
 .container-fluid {
@@ -127,7 +144,7 @@ button:focus {
 .information{
     width: 100%;
     height: 300px;
-    background-color: #ffcd82;
+    background-color:transparent;
     text-align: center;
     padding-top: 15px;
     background-size: cover;
@@ -194,7 +211,7 @@ button:focus {
 /*--about--*/
 
 .relaxation {
-    background: url("../images/relaxation2.jpg") no-repeat bottom center fixed;
+    background:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.4)), url("../images/relaxation2.jpg") no-repeat bottom center fixed;
     width: 100%;
     height: 800px;
     background-size: cover;
@@ -206,24 +223,19 @@ button:focus {
 
 .about {
     font-size: 15px;
-    color: #030303;
-    padding-top: 10px;
-    height: 150px;
+    color: rgba(187, 183, 183, 0.4);
+    padding-top: 15px;
+    height: 200px;
 }
 
 .block-divider-about {
     width: 100px;
     height: 7px;
     border: 0px;
-    background-color: #19610a;
+    background-color: #2e312e;
     border-radius: 5px;
 }
 
-.jumbotron {
-    background-color: transparent;
-    padding-bottom: 0;
-    padding-right: 0;
-}
 
 
 /*-footer-*/
